# pastepipe

./: .gitignore  PastePipe.cabal  README.md  pastepipe.hs
src/: Main.hs
src/Utils/: PastePipe.hs
